<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragmentEnBlanco">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="87dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="102dp"
            android:layout_marginBottom="634dp"
            android:drawableLeft="@android:drawable/dialog_frame"
            android:text="@string/ButonText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="7dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_gravity="bottom"
                android:gravity="bottom|right"
                android:text="TextView"
                android:textSize="@dimen/TamPer"
                tools:text="@string/ImagenPrinLogo" />

            <TableRow
                android:layout_width="220dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="183dp"
                    android:layout_height="173dp"
                    android:contentDescription="@string/ImagenPrinLogo"
                    app:srcCompat="@android:drawable/alert_dark_frame"
                    tools:src="@tools:sample/avatars"
                    tools:srcCompat="@mipmap/ic_launcher" />
            </TableRow>

        </LinearLayout>

        <FrameLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="232dp">

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                tools:ignore="TouchTargetSizeCheck" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="282dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextTextEmailAddress2"
                android:layout_width="657dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Emai"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/TamañoHori"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/TextCh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="75dp"
            android:layout_marginBottom="342dp"
            android:text="TextView"
            android:textSize="60sp" />

        <EditText
            android:id="@+id/EDPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/TextCh"
            android:layout_marginStart="-214dp"
            android:layout_marginBottom="102dp"
            android:layout_toEndOf="@+id/TextCh"
            android:ems="10"
            android:hint="@string/TextGuie"
            android:minHeight="48dp"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textoejemplo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/EDPassword"
            android:layout_alignEnd="@+id/EDPassword"
            android:layout_marginEnd="-47dp"
            android:layout_marginBottom="45dp"
            android:text="Hello World!"
            android:textSize="48sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>